# ML_2025_fall

./: .gitignore  README.md  run_test.txt
Final/src/: func.py  inference.py
Final/submission/: ensemble_result.csv
MLHW1/hw1/: main.py  pyproject.toml  requirements.txt
MLHW2/hw2/: main.py  pyproject.toml  requirements.txt
MLHW2/test/: test.py
MLHW3/: (114-1) HW3_Slide.pptx
MLHW3/114-1-ml-hw3-release/: main.py  pyproject.toml  requirements.txt
MLHW3/114-1-ml-hw3-release/src/: adaboost.py  bagging.py  decision_tree.py  utils.py
MLHW4/: README.md  record
MLHW4/mypc_status/ML_HW4/: 112550183_weight.txt
MLHW4/mypc_status/ML_HW4/src/: inference_ensemble.py
MLHW4/mypc_status/other/: 1.csv  4_b6_pseudo.csv  ensemble_result.csv
MLHW4/mypc_status/other/ML_HW4/: README.md
MLHW4/server_status/final/: README.md
MLHW4/server_status/final/src/: training.py
MLHW4/server_status/four/: requirements.txt
MLHW4/server_status/four/src/: inference_b5(currbest).py  train_b6(currbest).py
MLHW4/server_status/four/src2/: change_TF.py  check_model_size.py  func.py  inference_test.py  train_test.py
MLHW4/server_status/four/submission/: 1_b5.csv  1_b7.csv  2.csv  3_b6.csv  5_b5_pseudo.csv
MLHW4/src/: 112550183_weight.txt  check_img_num.py  inference_b6(currbest).py  train_b5(currbest).py
MLHW4/src2/: inference_ensemble.py
MLHW4/submission/: 1.csv  1_b5.csv  1_b6.csv  1_b7.csv  2.csv  2_b6.csv  5_b5_pseudo.csv
