[project]
name = "hw2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "flake8==7.3.0",
    "fonttools==4.60.1",
    "iniconfig==2.3.0",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "loguru==0.7.3",
    "matplotlib==3.10.7",
    "mccabe==0.7.0",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "pluggy==1.6.0",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pytest==8.4.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.2",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "tzdata==2025.2",
    "win32-setctime==1.2.0",
]
