[project]
name = "114-1-ml-hw3-release"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama==0.4.6",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "filelock==3.20.0",
    "flake8==7.3.0",
    "fonttools==4.60.1",
    "fsspec==2025.10.0",
    "iniconfig==2.3.0",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "loguru==0.7.3",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "mccabe==0.7.0",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==2.3.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "pillow==12.0.0",
    "pluggy==1.6.0",
    "pycodestyle==2.14.0",
    "pyflakes==3.4.0",
    "pygments==2.19.2",
    "pyparsing==3.2.5",
    "pytest==9.0.0",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "setuptools==80.9.0",
    "six==1.17.0",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.9.0",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "win32-setctime==1.2.0",
]
